--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-#OPENAI_API_KEY=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
+#OPENAI_API_KEY=
 
-LINKEDIN_USERNAME=Rajesh Kalidandi
-LINKEDIN_PASSWORD=Rajesh@2847
+LINKEDIN_USERNAME=
+LINKEDIN_PASSWORD=
+
+## Not Necessary !
